migrate to Java 17, replace deprecated `new XYZ` wrappers with `valueOf` or `parseXYZ`, and centralize Slim3 version configuration in `gradle.properties`.